dev/manifests/3rd-party/mongodb/mongodb-network-policy.yml
---
# Source: xxxxx/templates/mongodb-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-ingress
  annotations:
    pia-team.com/role: pia.k8s.mongodb/0.5.3
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 27017
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mongodb
  policyTypes:
  - Ingress
---
# Source: xxxxx/templates/mongodb-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-egress
  annotations:
    pia-team.com/role: pia.k8s.mongodb/0.5.3
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 27017
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mongodb
  policyTypes:
  - Egress
